--- a/www/css/fonts.css
+++ b/www/css/fonts.css
@@ -3,7 +3,7 @@
   font-family: 'Baloo';
   font-style: normal;
   font-weight: 400;
-  src: local('Baloo Regular'), local('Baloo-Regular'), url(https://fonts.gstatic.com/s/baloo/v5/6xKhdSpJJ92I9MWOCm7JLQ.woff2) format('woff2');
+  src: local('Baloo Regular'), local('Baloo-Regular'), url(../fonts/Baloo-Regular.ttf) format('opentype');
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
 }
 /* vietnamese */
@@ -11,7 +11,7 @@
   font-family: 'Baloo';
   font-style: normal;
   font-weight: 400;
-  src: local('Baloo Regular'), local('Baloo-Regular'), url(https://fonts.gstatic.com/s/baloo/v5/6xKhdSpJJ92I9MWACm7JLQ.woff2) format('woff2');
+  src: local('Baloo Regular'), local('Baloo-Regular'), url(../fonts/Baloo-Regular.ttf) format('opentype');
   unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -19,7 +19,7 @@
   font-family: 'Baloo';
   font-style: normal;
   font-weight: 400;
-  src: local('Baloo Regular'), local('Baloo-Regular'), url(https://fonts.gstatic.com/s/baloo/v5/6xKhdSpJJ92I9MWBCm7JLQ.woff2) format('woff2');
+  src: local('Baloo Regular'), local('Baloo-Regular'), url(../fonts/Baloo-Regular.ttf) format('opentype');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -27,7 +27,7 @@
   font-family: 'Baloo';
   font-style: normal;
   font-weight: 400;
-  src: local('Baloo Regular'), local('Baloo-Regular'), url(https://fonts.gstatic.com/s/baloo/v5/6xKhdSpJJ92I9MWPCm4.woff2) format('woff2');
+  src: local('Baloo Regular'), local('Baloo-Regular'), url(../fonts/Baloo-Regular.ttf) format('opentype');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin-ext */
@@ -35,7 +35,7 @@
   font-family: 'Merriweather Sans';
   font-style: normal;
   font-weight: 400;
-  src: local('Merriweather Sans'), local('MerriweatherSans-Regular'), url(https://fonts.gstatic.com/s/merriweathersans/v11/2-c99IRs1JiJN1FRAMjTN5zd9vgsFHX7QjX78w.woff2) format('woff2');
+  src: local('Merriweather Sans'), local('MerriweatherSans-Regular'), url(../fonts/MerriweatherSans-Regular.ttf) format('opentype');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -43,6 +43,6 @@
   font-family: 'Merriweather Sans';
   font-style: normal;
   font-weight: 400;
-  src: local('Merriweather Sans'), local('MerriweatherSans-Regular'), url(https://fonts.gstatic.com/s/merriweathersans/v11/2-c99IRs1JiJN1FRAMjTN5zd9vgsFHX1QjU.woff2) format('woff2');
+  src: local('Merriweather Sans'), local('MerriweatherSans-Regular'), url(../fonts/MerriweatherSans-Regular.ttf) format('opentype');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
